y.output
Grammar

    0 $accept: program $end

    1 program: stmtlist

    2 stmtlist: stmtlist NEWLINE
    3         | stmtlist stmt NEWLINE
    4         | stmtlist error NEWLINE
    5         | %empty

    6 stmt: ID EQUALS exp
    7     | PRINT ID

    8 exp: MINUS exp
    9    | exp PLUS exp
   10    | exp MINUS exp
   11    | exp TIMES exp
   12    | exp DIVIDE exp
   13    | LPAREN exp RPAREN
   14    | NUMBER
   15    | ID


Terminals, with rules where they appear

$end (0) 0
error (256) 4
NUMBER (258) 14
ID (259) 6 7 15
NEWLINE (260) 2 3 4
EQUALS (261) 6
PRINT (262) 7
PLUS (263) 9
MINUS (264) 8 10
TIMES (265) 11
DIVIDE (266) 12
LPAREN (267) 13
RPAREN (268) 13
UMINUS (269)


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
program (16)
    on left: 1, on right: 0
stmtlist (17)
    on left: 2 3 4 5, on right: 1 2 3 4
stmt (18)
    on left: 6 7, on right: 3
exp (19)
    on left: 8 9 10 11 12 13 14 15, on right: 6 8 9 10 11 12 13


State 0

    0 $accept: . program $end

    $default  reduce using rule 5 (stmtlist)

    program   go to state 1
    stmtlist  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: stmtlist .
    2 stmtlist: stmtlist . NEWLINE
    3         | stmtlist . stmt NEWLINE
    4         | stmtlist . error NEWLINE

    error    shift, and go to state 4
    ID       shift, and go to state 5
    NEWLINE  shift, and go to state 6
    PRINT    shift, and go to state 7

    $end  reduce using rule 1 (program)

    stmt  go to state 8


State 3

    0 $accept: program $end .

    $default  accept


State 4

    4 stmtlist: stmtlist error . NEWLINE

    NEWLINE  shift, and go to state 9


State 5

    6 stmt: ID . EQUALS exp

    EQUALS  shift, and go to state 10


State 6

    2 stmtlist: stmtlist NEWLINE .

    $default  reduce using rule 2 (stmtlist)


State 7

    7 stmt: PRINT . ID

    ID  shift, and go to state 11


State 8

    3 stmtlist: stmtlist stmt . NEWLINE

    NEWLINE  shift, and go to state 12


State 9

    4 stmtlist: stmtlist error NEWLINE .

    $default  reduce using rule 4 (stmtlist)


State 10

    6 stmt: ID EQUALS . exp

    NUMBER  shift, and go to state 13
    ID      shift, and go to state 14
    MINUS   shift, and go to state 15
    LPAREN  shift, and go to state 16

    exp  go to state 17


State 11

    7 stmt: PRINT ID .

    $default  reduce using rule 7 (stmt)


State 12

    3 stmtlist: stmtlist stmt NEWLINE .

    $default  reduce using rule 3 (stmtlist)


State 13

   14 exp: NUMBER .

    $default  reduce using rule 14 (exp)


State 14

   15 exp: ID .

    $default  reduce using rule 15 (exp)


State 15

    8 exp: MINUS . exp

    NUMBER  shift, and go to state 13
    ID      shift, and go to state 14
    MINUS   shift, and go to state 15
    LPAREN  shift, and go to state 16

    exp  go to state 18


State 16

   13 exp: LPAREN . exp RPAREN

    NUMBER  shift, and go to state 13
    ID      shift, and go to state 14
    MINUS   shift, and go to state 15
    LPAREN  shift, and go to state 16

    exp  go to state 19


State 17

    6 stmt: ID EQUALS exp .
    9 exp: exp . PLUS exp
   10    | exp . MINUS exp
   11    | exp . TIMES exp
   12    | exp . DIVIDE exp

    PLUS    shift, and go to state 20
    MINUS   shift, and go to state 21
    TIMES   shift, and go to state 22
    DIVIDE  shift, and go to state 23

    $default  reduce using rule 6 (stmt)


State 18

    8 exp: MINUS exp .
    9    | exp . PLUS exp
   10    | exp . MINUS exp
   11    | exp . TIMES exp
   12    | exp . DIVIDE exp

    $default  reduce using rule 8 (exp)


State 19

    9 exp: exp . PLUS exp
   10    | exp . MINUS exp
   11    | exp . TIMES exp
   12    | exp . DIVIDE exp
   13    | LPAREN exp . RPAREN

    PLUS    shift, and go to state 20
    MINUS   shift, and go to state 21
    TIMES   shift, and go to state 22
    DIVIDE  shift, and go to state 23
    RPAREN  shift, and go to state 24


State 20

    9 exp: exp PLUS . exp

    NUMBER  shift, and go to state 13
    ID      shift, and go to state 14
    MINUS   shift, and go to state 15
    LPAREN  shift, and go to state 16

    exp  go to state 25


State 21

   10 exp: exp MINUS . exp

    NUMBER  shift, and go to state 13
    ID      shift, and go to state 14
    MINUS   shift, and go to state 15
    LPAREN  shift, and go to state 16

    exp  go to state 26


State 22

   11 exp: exp TIMES . exp

    NUMBER  shift, and go to state 13
    ID      shift, and go to state 14
    MINUS   shift, and go to state 15
    LPAREN  shift, and go to state 16

    exp  go to state 27


State 23

   12 exp: exp DIVIDE . exp

    NUMBER  shift, and go to state 13
    ID      shift, and go to state 14
    MINUS   shift, and go to state 15
    LPAREN  shift, and go to state 16

    exp  go to state 28


State 24

   13 exp: LPAREN exp RPAREN .

    $default  reduce using rule 13 (exp)


State 25

    9 exp: exp . PLUS exp
    9    | exp PLUS exp .
   10    | exp . MINUS exp
   11    | exp . TIMES exp
   12    | exp . DIVIDE exp

    TIMES   shift, and go to state 22
    DIVIDE  shift, and go to state 23

    $default  reduce using rule 9 (exp)


State 26

    9 exp: exp . PLUS exp
   10    | exp . MINUS exp
   10    | exp MINUS exp .
   11    | exp . TIMES exp
   12    | exp . DIVIDE exp

    TIMES   shift, and go to state 22
    DIVIDE  shift, and go to state 23

    $default  reduce using rule 10 (exp)


State 27

    9 exp: exp . PLUS exp
   10    | exp . MINUS exp
   11    | exp . TIMES exp
   11    | exp TIMES exp .
   12    | exp . DIVIDE exp

    $default  reduce using rule 11 (exp)


State 28

    9 exp: exp . PLUS exp
   10    | exp . MINUS exp
   11    | exp . TIMES exp
   12    | exp . DIVIDE exp
   12    | exp DIVIDE exp .

    $default  reduce using rule 12 (exp)
